Import of DOHERTY/WWW-Hashbang-Pastebin-Client-0.002 from CPAN.
gitpan-cpan-distribution: WWW-Hashbang-Pastebin-Client
gitpan-cpan-version:      0.002
gitpan-cpan-path:         DOHERTY/WWW-Hashbang-Pastebin-Client-0.002.tar.gz
gitpan-cpan-author:       DOHERTY
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     WWW::Hashbang::Pastebin websites
 
 VERSION
-    version 0.001
+    version 0.002
 
 SYNOPSIS
         use WWW::Hashbang::Pastebin::Client;
@@ -57,6 +57,9 @@ METHODS
     This is a synonym for "get"
 
 AVAILABILITY
+    The project homepage is
+    <http://metacpan.org/release/WWW-Hashbang-Pastebin-Client/>.
+
     The latest version of this module is available from the Comprehensive
     Perl Archive Network (CPAN). Visit <http://www.perl.com/CPAN/> to find a
     CPAN site near you, or see
